--- a/main/css/style.css
+++ b/main/css/style.css
@@ -137,7 +137,7 @@ a {
 #download_badge_1 {
   margin: 10px 0px 10px 0;
   /*margin: 10px 200px 10px 0;*/
-  /*height: 58px;*/
+  height: 57px;
 }
 
 .download_badges {
